crates/plotnik-tests/tests/02-parser/recovery_validation/def_name_dotted.txt
my.expr = (identifier)
------------------ DIAGNOSTICS -------------------
error: definition names must be PascalCase
 --> query.ptk:1:1
  |
1 | my.expr = (identifier)
  | ^^^^^^^
  |
help: use `MyExpr`
  |
1 - my.expr = (identifier)
1 + MyExpr = (identifier)
  |
help: definition names become result type names
